--- a/Lab_1/baseline_NER.ipynb
+++ b/Lab_1/baseline_NER.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +22,7 @@
        "True"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -124,15 +124,18 @@
     "outputfilename=\"./output.txt\"\n",
     "outputfile = open(outputfilename, \"w\")\n",
     "\n",
-    "tree = ET.parse(\"./data/Devel/2981704.xml\")\n",
-    "root = tree.getroot()\n",
+    "for filename in os.listdir(inputdir):\n",
+    "    \n",
+    "    file_path = os.path.join(inputdir, filename)  \n",
+    "    tree = ET.parse(file_path)\n",
+    "    root = tree.getroot()\n",
     "\n",
-    "for child in root:\n",
-    "    (sid, text) = (child.attrib[\"id\"], child.attrib[\"text\"])\n",
-    "    span_generator = WhitespaceTokenizer().span_tokenize(text)\n",
-    "    tokenized_list = tokenize(text, span_generator)\n",
-    "    entities = extract_entities(tokenized_list)\n",
-    "    output_entities(sid, entities, outputfile)\n",
+    "    for child in root:\n",
+    "        (sid, text) = (child.attrib[\"id\"], child.attrib[\"text\"])\n",
+    "        span_generator = WhitespaceTokenizer().span_tokenize(text)\n",
+    "        tokenized_list = tokenize(text, span_generator)\n",
+    "        entities = extract_entities(tokenized_list)\n",
+    "        output_entities(sid, entities, outputfile)\n",
     "\n",
     "evaluate(inputdir, outputfilename)\n",
     "outputfile.close()"
