Small refactoring to existent code

--- a/Lab_1/baseline_NER.ipynb
+++ b/Lab_1/baseline_NER.ipynb
@@ -63,14 +63,17 @@
     "        d = {}\n",
     "        \n",
     "        if (word[0].isupper() and offset_from != 0) or (word.isupper()) or (word==\"Spermine\"):\n",
-    "            d[\"name\"] = word\n",
-    "            d[\"type\"] = \"drug\" # Posar pes per fer probabilitat 2/3 si es drug, 1/3 si es brand\n",
-    "            d[\"offset\"] = \"{}-{}\".format(offset_from, offset_to)\n",
-    "            last_type = \"drug\"\n",
-    "        \n",
-    "        \n",
-    "        if last_type != None:\n",
-    "            pass\n",
+    "            if last_type != None:\n",
+    "                prev_word, prev_offset_from, _ = tokenized_list[i-1]\n",
+    "                entities_list.pop(-1) \n",
+    "                d[\"name\"] = prev_word + \" acid\"\n",
+    "                d[\"type\"] = \"drug\"\n",
+    "                d[\"offset\"] = \"{}-{}\".format(prev_offset_from, offset_to)\n",
+    "            else:\n",
+    "                d[\"name\"] = word\n",
+    "                d[\"type\"] = \"drug\" # Posar pes per fer probabilitat 2/3 si es drug, 1/3 si es brand\n",
+    "                d[\"offset\"] = \"{}-{}\".format(offset_from, offset_to)             \n",
+    "            last_type = \"drug\"                  \n",
     "        \n",
     "        #TODO: si la paraula seguent tambe te el mateix tipus, merge\n",
     "        elif word.lower() == \"acid\":\n",
@@ -78,13 +81,15 @@
     "            \n",
     "            # Remove drug or brand if it was added since the next word is acid\n",
     "            if last_type != None:\n",
-    "                entitites_list.pop(-1)\n",
-    "            \n",
+    "                entitites_list.pop(-1)            \n",
     "            d[\"name\"] = prev_word + \" acid\"\n",
     "            d[\"type\"] = \"drug\"\n",
     "            d[\"offset\"] = \"{}-{}\".format(prev_offset_from, offset_to)\n",
+    "            last_type = \"drug\"\n",
     "    \n",
-    "        last_type = None\n",
+    "        else:\n",
+    "            last_type = None\n",
+    "            \n",
     "        if d.keys(): entities_list.append(d)\n",
     "    return entities_list"
    ]
