Generalize spermine with mayus and minus. When , or : at the end of word, next word is not merged with this one. Remove last . of a sentence

--- a/Lab_1/baseline_NER.ipynb
+++ b/Lab_1/baseline_NER.ipynb
@@ -51,18 +51,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "def extract_entities(tokenized_list):\n",
     "    entities_list = []\n",
     "    last_type = None\n",
+    "    word_stripped = False\n",
+    "    list_length = len(tokenized_list)-1\n",
     "    for i, token in enumerate(tokenized_list):\n",
     "        word, offset_from, offset_to = token\n",
     "        d = {}\n",
     "        \n",
-    "        if (word[0].isupper() and offset_from != 0) or (word.isupper()) or (word==\"Spermine\"):\n",
+    "        # remove . from last word \n",
+    "        if index == list_length and word.endswith(\".\"):\n",
+    "            word = word[:-1]\n",
+    "        # strip , and : from word\n",
+    "        elif (word.endswith(\":\") or word.endswith(\",\")):\n",
+    "            word = word[:-1]\n",
+    "            word_stripped = True\n",
+    "        \n",
+    "        \n",
+    "        if (word[0].isupper() and offset_from != 0) or (word.isupper()) or (word.lower()==\"spermine\"):\n",
     "            if last_type != None:\n",
     "                prev_word, prev_offset_from, _ = tokenized_list[i-1]\n",
     "                entities_list.pop(-1) \n",
@@ -89,6 +100,11 @@
     "    \n",
     "        else:\n",
     "            last_type = None\n",
+    "        \n",
+    "        # If this word was ending with , or : next word not mergerd with this one\n",
+    "        if word_stripped:\n",
+    "            last_type = None\n",
+    "            word_stripped = False\n",
     "            \n",
     "        if d.keys(): entities_list.append(d)\n",
     "    return entities_list"
