Add new output and small fixes

--- a/Lab_1/baseline_NER.ipynb
+++ b/Lab_1/baseline_NER.ipynb
@@ -65,13 +65,16 @@
     "        d = {}\n",
     "        \n",
     "        # remove . from last word \n",
-    "        if index == list_length and word.endswith(\".\"):\n",
+    "        if i == list_length and word.endswith(\".\"):\n",
     "            word = word[:-1]\n",
     "        # strip , and : from word\n",
     "        elif (word.endswith(\":\") or word.endswith(\",\")):\n",
     "            word = word[:-1]\n",
     "            word_stripped = True\n",
     "        \n",
+    "        # this should only happen if last word is a single .\n",
+    "        if not word:\n",
+    "            continue\n",
     "        \n",
     "        if (word[0].isupper() and offset_from != 0) or (word.isupper()) or (word.lower()==\"spermine\"):\n",
     "            if last_type != None:\n",
