Add a couple of TODOs

--- a/Lab_1/baseline_NER.ipynb
+++ b/Lab_1/baseline_NER.ipynb
@@ -51,10 +51,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# TODO afegir knowledge de english words (the, in etc. + drugs i brands que sabem de test)\n",
+    "# TODO mirar com detectar brands\n",
+    "# TODO les vitamines posa \"vitamine D\" i detectem D com a drug, mirar si paraula anterior es vitamine i actual és una lletra i no contar com a drug\n",
     "def extract_entities(tokenized_list):\n",
     "    entities_list = []\n",
     "    last_type = None\n",
@@ -72,7 +75,7 @@
     "            word = word[:-1]\n",
     "            word_stripped = True\n",
     "        \n",
-    "        # this should only happen if last word is a single .\n",
+    "        # this should only happen if last word is a single \".\"\"\n",
     "        if not word:\n",
     "            continue\n",
     "        \n",
