--- a/Lab_1/baseline_NER.ipynb
+++ b/Lab_1/baseline_NER.ipynb
@@ -36,7 +36,9 @@
     "import os\n",
     "\n",
     "nltk.download('stopwords')\n",
-    "nltk.download('punkt')\n"
+    "nltk.download('punkt')\n",
+    "\n",
+    "stopWords = set(stopwords.words('english'))"
    ]
   },
   {
@@ -140,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 29,
    "metadata": {
     "scrolled": true
    },
@@ -192,9 +194,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
@@ -206,7 +208,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.15"
+   "version": "2.7.10"
   }
  },
  "nbformat": 4,
