--- a/Lab_4/rf.ipynb
+++ b/Lab_4/rf.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,17 +100,17 @@
     "    new_X_train = np.zeros((len(X_train), n_features))\n",
     "    new_X_test = np.zeros((len(X_test), n_features))\n",
     "    \n",
-    "    \n",
     "    for i, sample in enumerate(X_train):\n",
     "        for j, feature_name in enumerate(feature_names_eq):\n",
     "            for feat in sample:\n",
     "                if feature_name in feat:\n",
     "                    value = feat.split(\"=\")[1]                \n",
     "                    new_X_train[i,j] = value\n",
-    "    \n",
+    "                \n",
     "    for i, sample in enumerate(X_train):\n",
     "        for j, feature_name in enumerate(feature_names_without_eq, len(feature_names_eq)):\n",
     "            if feature_name in sample:\n",
+    "\n",
     "                new_X_train[i,j] = 1\n",
     "    \n",
     "    for i, sample in enumerate(X_test):\n",
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,27 +172,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
-       "       0., 0., 0.])"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "X_train[1]"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 32,
    "metadata": {},
    "outputs": [
@@ -214,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +214,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.svm import LinearSVC"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -243,9 +231,7 @@
      "output_type": "stream",
      "text": [
       "/home/ggebbia/.local/lib/python2.7/site-packages/sklearn/model_selection/_split.py:2052: FutureWarning: You should specify a value for 'cv' instead of relying on the default value. The default value will change from 3 to 5 in version 0.22.\n",
-      "  warnings.warn(CV_WARNING, FutureWarning)\n",
-      "/home/ggebbia/.local/lib/python2.7/site-packages/sklearn/model_selection/_split.py:651: Warning: The least populated class in y has only 2 members, which is too few. The minimum number of members in any class cannot be less than n_splits=3.\n",
-      "  % (min_groups, self.n_splits)), Warning)\n"
+      "  warnings.warn(CV_WARNING, FutureWarning)\n"
      ]
     }
    ],
@@ -253,14 +239,28 @@
     "rfc_cv = RandomForestClassifier()\n",
     "params = {'n_estimators': [5, 10, 15, 20],\n",
     "         'max_depth': [100, 200, 300]}\n",
+    "\n",
+    "svm_cv = LinearSVC(class_weight=\"balanced\")\n",
     "gridsearch(rfc_cv, params)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'Y_pred' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-16-9767b7164c44>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0moutputfile\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moutput_filename\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"w\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0moutput_predicted_entities\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mY_pred\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfulltest_filename\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0moutputfile\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'Y_pred' is not defined"
+     ]
+    }
+   ],
    "source": [
     "outputfile = open(output_filename, \"w\")\n",
     "output_predicted_entities(Y_pred, fulltest_filename)\n",
