--- a/Lab_4/rf.ipynb
+++ b/Lab_4/rf.ipynb
@@ -15,6 +15,24 @@
     "import pandas as pd\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.svm import SVC"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import joblib\n",
+    "import argparse\n",
+    "import itertools\n",
+    "import collections\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.model_selection import GridSearchCV\n",
     "from sklearn.svm import SVC\n",
     "def split_data(features):\n",
     "    \"\"\"\n",
@@ -154,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,6 +184,8 @@
     "            \"n_estimators\": n_estimator,\n",
     "            \"max_depth\": max_depth\n",
     "        }\n",
+    "\n",
+    "        print(n_estimator, max_depth)\n",
     "\n",
     "        prueba_nombre = \"RF_estimator={}_depth={}\".format(n_estimator, max_depth)\n",
     "        output_filename = \"./pruebas_finales/{}.txt\".format(prueba_nombre)\n",
@@ -180,7 +200,7 @@
     "        outputfile.close()\n",
     "        \n",
     "        filename = '{}.sav'.format(prueba_nombre)\n",
-    "        joblib.dump(model, filename)\n",
+    "        joblib.dump(rfc_cv, filename)\n",
     "\n",
     "        evaluate(\"data/Devel\", output_filename)"
    ]
@@ -194,12 +214,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('linear', 'auto')\n"
+      "('poly', 'auto')\n",
+      "[LibSVM]"
      ]
     }
    ],
    "source": [
-    "for kernel  in [\"linear\", \"poly\", \"rbf\", \"sigmoid\"]:\n",
+    "for kernel  in [ \"poly\", \"rbf\", \"sigmoid\"]:\n",
     "    for gamma in [\"auto\", \"scale\"]:\n",
     "\n",
     "        print(kernel, gamma)\n",
@@ -207,6 +228,8 @@
     "            \"class_weight\": \"balanced\",\n",
     "            \"kernel\": kernel,\n",
     "            \"gamma\": gamma,\n",
+    "            \"verbose\": 1,\n",
+    "            \"cache_size\": 6000\n",
     "        }\n",
     "\n",
     "        prueba_nombre = \"SVM_kernel={}_gamma={}\".format(kernel, gamma)\n",
@@ -237,9 +260,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
@@ -251,7 +274,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.15"
+   "version": "2.7.17"
   }
  },
  "nbformat": 4,
