--- a/Lab_4/rf.ipynb
+++ b/Lab_4/rf.ipynb
@@ -20,9 +20,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "could not convert string to float: null",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-32-56226624090b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m    156\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    157\u001b[0m \u001b[0mmodel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlearner\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mRandomForestClassifier\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mparams\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 158\u001b[0;31m \u001b[0mY_pred\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mclassifier\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    159\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    160\u001b[0m \u001b[0moutputfile\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moutput_filename\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"w\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-32-56226624090b>\u001b[0m in \u001b[0;36mclassifier\u001b[0;34m(model)\u001b[0m\n\u001b[1;32m     88\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     89\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mclassifier\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 90\u001b[0;31m     \u001b[0mY_pred\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_test\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     91\u001b[0m     \u001b[0mY_pred\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mvalue\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mvalue\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mY_pred\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     92\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mY_pred\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/home/ggebbia/.local/lib/python2.7/site-packages/sklearn/ensemble/forest.pyc\u001b[0m in \u001b[0;36mpredict\u001b[0;34m(self, X)\u001b[0m\n\u001b[1;32m    541\u001b[0m             \u001b[0mThe\u001b[0m \u001b[0mpredicted\u001b[0m \u001b[0mclasses\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    542\u001b[0m         \"\"\"\n\u001b[0;32m--> 543\u001b[0;31m         \u001b[0mproba\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict_proba\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    544\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    545\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mn_outputs_\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/home/ggebbia/.local/lib/python2.7/site-packages/sklearn/ensemble/forest.pyc\u001b[0m in \u001b[0;36mpredict_proba\u001b[0;34m(self, X)\u001b[0m\n\u001b[1;32m    581\u001b[0m         \u001b[0mcheck_is_fitted\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'estimators_'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    582\u001b[0m         \u001b[0;31m# Check data\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 583\u001b[0;31m         \u001b[0mX\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_validate_X_predict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    584\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    585\u001b[0m         \u001b[0;31m# Assign chunk of trees to jobs\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/home/ggebbia/.local/lib/python2.7/site-packages/sklearn/ensemble/forest.pyc\u001b[0m in \u001b[0;36m_validate_X_predict\u001b[0;34m(self, X)\u001b[0m\n\u001b[1;32m    360\u001b[0m                                  \"call `fit` before exploiting the model.\")\n\u001b[1;32m    361\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 362\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mestimators_\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_validate_X_predict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcheck_input\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    363\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    364\u001b[0m     \u001b[0;34m@\u001b[0m\u001b[0mproperty\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/home/ggebbia/.local/lib/python2.7/site-packages/sklearn/tree/tree.pyc\u001b[0m in \u001b[0;36m_validate_X_predict\u001b[0;34m(self, X, check_input)\u001b[0m\n\u001b[1;32m    375\u001b[0m         \u001b[0;34m\"\"\"Validate X whenever one tries to predict, apply, predict_proba\"\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    376\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mcheck_input\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 377\u001b[0;31m             \u001b[0mX\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcheck_array\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mDTYPE\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maccept_sparse\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"csr\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    378\u001b[0m             if issparse(X) and (X.indices.dtype != np.intc or\n\u001b[1;32m    379\u001b[0m                                 X.indptr.dtype != np.intc):\n",
+      "\u001b[0;32m/home/ggebbia/.local/lib/python2.7/site-packages/sklearn/utils/validation.pyc\u001b[0m in \u001b[0;36mcheck_array\u001b[0;34m(array, accept_sparse, accept_large_sparse, dtype, order, copy, force_all_finite, ensure_2d, allow_nd, ensure_min_samples, ensure_min_features, warn_on_dtype, estimator)\u001b[0m\n\u001b[1;32m    525\u001b[0m             \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    526\u001b[0m                 \u001b[0mwarnings\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msimplefilter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'error'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mComplexWarning\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 527\u001b[0;31m                 \u001b[0marray\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0masarray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdtype\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0morder\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0morder\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    528\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mComplexWarning\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    529\u001b[0m                 raise ValueError(\"Complex data not supported\\n\"\n",
+      "\u001b[0;32m/home/ggebbia/.local/lib/python2.7/site-packages/numpy/core/numeric.pyc\u001b[0m in \u001b[0;36masarray\u001b[0;34m(a, dtype, order)\u001b[0m\n\u001b[1;32m    536\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    537\u001b[0m     \"\"\"\n\u001b[0;32m--> 538\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcopy\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mFalse\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0morder\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0morder\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    539\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    540\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: could not convert string to float: null"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import joblib\n",
@@ -33,7 +52,7 @@
     "import pandas as pd\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.model_selection import GridSearchCV\n",
-    "from sklearn.svm import SVC\n",
+    "from sklearn.svm import LinearSVC\n",
     "def split_data(features):\n",
     "    \"\"\"\n",
     "    Receive a list of featured sentences splitted by words and split it into samples and labels.\n",
@@ -56,7 +75,7 @@
     "\n",
     "    return X_samples, Y_labels\n",
     "\n",
-    "def transform_feature_vector_to_dataset(X_train, X_test):\n",
+    "def transform_feature_vector_to_dataset(X_train, X_test, flag=\"train\"):\n",
     "\n",
     "    flatten_X_samples = list(itertools.chain(*X_train))\n",
     "    feature_names_eq = [item.split(\"=\")[0]for item in flatten_X_samples if \"=\" in item]\n",
@@ -65,45 +84,57 @@
     "    feature_names_without_eq.remove('')\n",
     "    n_features = len(feature_names_eq) + len(feature_names_without_eq)\n",
     "\n",
-    "    new_X_train = np.zeros((len(X_train), n_features))\n",
-    "    new_X_test = np.zeros((len(X_test), n_features))\n",
+    "    \n",
+    "    if flag == \"train\":\n",
+    "        \n",
+    "        new_X_train = np.zeros((len(X_train), n_features))\n",
+    "        for i, sample in enumerate(X_train):\n",
+    "            for j, feature_name in enumerate(feature_names_eq):\n",
+    "                for feat in sample:\n",
+    "                    if feature_name in feat:\n",
+    "                        value = feat.split(\"=\")[1]\n",
+    "                        new_X_train[i,j] = value\n",
+    "                        \n",
+    "            for j, feature_name in enumerate(feature_names_without_eq, len(feature_names_eq)):\n",
+    "                if feature_name in sample:\n",
+    "                    new_X_train[i,j] = 1\n",
+    "                    \n",
+    "        return new_X_train, _\n",
+    "                    \n",
+    "    elif flag == \"test\":\n",
+    "    \n",
+    "        new_X_test = np.zeros((len(X_test), n_features))\n",
+    "        for i, sample in enumerate(X_test):\n",
+    "            for j, feature_name in enumerate(feature_names_eq):\n",
+    "                for feat in sample:\n",
+    "                    if feature_name in feat:\n",
+    "                        value = feat.split(\"=\")[1]\n",
+    "                        new_X_test[i,j] = value\n",
+    "                        \n",
+    "            for j, feature_name in enumerate(feature_names_without_eq, len(feature_names_eq)):\n",
+    "                if feature_name in sample:\n",
+    "                    new_X_test[i,j] = 1\n",
+    "\n",
+    "        return _, new_X_test\n",
     "\n",
     "\n",
-    "    for i, sample in enumerate(X_train):\n",
-    "        for j, feature_name in enumerate(feature_names_eq):\n",
-    "            for feat in sample:\n",
-    "                if feature_name in feat:\n",
-    "                    value = feat.split(\"=\")[1]\n",
-    "                    new_X_train[i,j] = value\n",
-    "\n",
-    "    for i, sample in enumerate(X_train):\n",
-    "        for j, feature_name in enumerate(feature_names_without_eq, len(feature_names_eq)):\n",
-    "            if feature_name in sample:\n",
-    "                new_X_train[i,j] = 1\n",
-    "\n",
-    "    for i, sample in enumerate(X_test):\n",
-    "        for j, feature_name in enumerate(feature_names_eq):\n",
-    "            for feat in sample:\n",
-    "                if feature_name in feat:\n",
-    "                    value = feat.split(\"=\")[1]\n",
-    "                    new_X_test[i,j] = value\n",
-    "\n",
-    "    for i, sample in enumerate(X_test):\n",
-    "        for j, feature_name in enumerate(feature_names_without_eq, len(feature_names_eq)):\n",
-    "            if feature_name in sample:\n",
-    "                new_X_test[i,j] = 1\n",
-    "\n",
-    "    return new_X_train, new_X_test\n",
-    "\n",
-    "\n",
-    "def process_feature_vectors(train_feature_vectors, test_feature_vectors):\n",
+    "def process_feature_vectors(train_feature_vectors, test_feature_vectors, flag):\n",
     "    X_train, Y_train = split_data(train_feature_vectors)\n",
     "    X_test, Y_test = split_data(test_feature_vectors)\n",
     "\n",
-    "    new_X_train, new_X_test = transform_feature_vector_to_dataset(X_train, X_test)\n",
-    "    # new_X_train, new_X_test = process_dataset_to_dataframe(new_X_train, new_X_test)\n",
+    "    new_X_train, new_X_test = transform_feature_vector_to_dataset(X_train, X_test, flag=flag)\n",
     "    return new_X_train, Y_train, new_X_test, Y_test\n",
     "\n",
+    "\n",
+    "def learner(algorithm, params):\n",
+    "    model = algorithm(**params)\n",
+    "    model.fit(X_train, Y_train)\n",
+    "    return model\n",
+    "\n",
+    "def classifier(model):\n",
+    "    Y_pred = model.predict(X_test)\n",
+    "    Y_pred = [[value] for value in Y_pred]\n",
+    "    return Y_pred\n",
     "\n",
     "def output_predicted_entities(Y_pred, filename):\n",
     "    \"\"\"\n",
@@ -156,8 +187,41 @@
     "test_filename = \"./marc_extracted_features/Devel/megam.dat\"\n",
     "fulltest_filename = \"./marc_extracted_features/Devel/feats.dat\"\n",
     "\n",
+    "train_feat_vects = open(train_filename, \"r\").read().split(\"\\n\")[:-1]\n",
+    "test_feat_vects = open(test_filename, \"r\").read().split(\"\\n\")[:-1]\n",
+    "\n",
+    "X_train, Y_train, X_test, Y_test = process_feature_vectors(train_feat_vects, test_feat_vects, flag=\"train\")\n",
+    "\n",
+    "# Put here the desired parameters to perform the learning and classification of the model\n",
+    "params = {\n",
+    "    \"class_weight\": \"balanced\",\n",
+    "    \"n_estimators\": 5,\n",
+    "    \"max_depth\": 50\n",
+    "}\n",
+    "\n",
+    "model = learner(RandomForestClassifier, params)\n",
+    "Y_pred = classifier(model)\n",
+    "\n",
+    "outputfile = open(output_filename, \"w\")\n",
+    "output_predicted_entities(Y_pred, fulltest_filename)\n",
+    "outputfile.close()\n",
+    "\n",
+    "evaluate(\"data/Train/\", output_filename)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_filename = \"./marc_extracted_features/Train/megam.dat\"\n",
+    "test_filename = \"./marc_extracted_features/Test-DDI/megam.dat\"\n",
+    "fulltest_filename = \"./marc_extracted_features/Test-DDI/feats.dat\"\n",
     "\n",
     "\n",
+    "prueba_nombre = \"Train_RF_estimator=5_depth=300\"\n",
+    "output_filename = \"./pruebas_finales/{}.txt\".format(prueba_nombre)\n",
     "\n",
     "\n",
     "train_feat_vects = open(train_filename, \"r\").read().split(\"\\n\")[:-1]\n",
@@ -167,87 +231,24 @@
     "train_feat_vects = open(train_filename, \"r\").read().split(\"\\n\")[:-1]\n",
     "test_feat_vects = open(test_filename, \"r\").read().split(\"\\n\")[:-1]\n",
     "\n",
-    "X_train, Y_train, X_test, Y_test = process_feature_vectors(train_feat_vects, test_feat_vects)\n"
+    "X_train, Y_train, X_test, Y_test = process_feature_vectors(train_feat_vects, test_feat_vects)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for n_estimator in [5, 10, 20, 50]:\n",
-    "    for max_depth in [50, 100, 150, 200, 250, 300]:\n",
+    "loaded_model = joblib.load(\"./SVM_tol=0.001_C=0.75.sav\")\n",
+    "Y_pred = loaded_model.predict(X_test)\n",
+    "Y_pred = [[value] for value in Y_pred]\n",
     "\n",
-    "        params = {\n",
-    "            \"class_weight\": \"balanced\",\n",
-    "            \"n_estimators\": n_estimator,\n",
-    "            \"max_depth\": max_depth\n",
-    "        }\n",
+    "outputfile = open(output_filename, \"w\")\n",
+    "output_predicted_entities(Y_pred, fulltest_filename)\n",
+    "outputfile.close()\n",
     "\n",
-    "        print(n_estimator, max_depth)\n",
-    "\n",
-    "        prueba_nombre = \"RF_estimator={}_depth={}\".format(n_estimator, max_depth)\n",
-    "        output_filename = \"./pruebas_finales/{}.txt\".format(prueba_nombre)\n",
-    "\n",
-    "        rfc_cv = RandomForestClassifier(**params)\n",
-    "        rfc_cv.fit(X_train, Y_train)\n",
-    "        Y_pred = rfc_cv.predict(X_test)\n",
-    "        Y_pred = [[value] for value in Y_pred]\n",
-    "\n",
-    "        outputfile = open(output_filename, \"w\")\n",
-    "        output_predicted_entities(Y_pred, fulltest_filename)\n",
-    "        outputfile.close()\n",
-    "        \n",
-    "        filename = '{}.sav'.format(prueba_nombre)\n",
-    "        joblib.dump(rfc_cv, filename)\n",
-    "\n",
-    "        evaluate(\"data/Devel\", output_filename)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "('poly', 'auto')\n",
-      "[LibSVM]"
-     ]
-    }
-   ],
-   "source": [
-    "for kernel  in [ \"poly\", \"rbf\", \"sigmoid\"]:\n",
-    "    for gamma in [\"auto\", \"scale\"]:\n",
-    "\n",
-    "        print(kernel, gamma)\n",
-    "        params = {\n",
-    "            \"class_weight\": \"balanced\",\n",
-    "            \"kernel\": kernel,\n",
-    "            \"gamma\": gamma,\n",
-    "            \"verbose\": 1,\n",
-    "            \"cache_size\": 6000\n",
-    "        }\n",
-    "\n",
-    "        prueba_nombre = \"SVM_kernel={}_gamma={}\".format(kernel, gamma)\n",
-    "        output_filename = \"./pruebas_finales/{}.txt\".format(prueba_nombre)\n",
-    "\n",
-    "        svc_cv = SVC(**params)\n",
-    "        svc_cv.fit(X_train, Y_train)\n",
-    "        Y_pred = svc_cv.predict(X_test)\n",
-    "        Y_pred = [[value] for value in Y_pred]\n",
-    "\n",
-    "        outputfile = open(output_filename, \"w\")\n",
-    "        output_predicted_entities(Y_pred, fulltest_filename)\n",
-    "        outputfile.close()\n",
-    "        \n",
-    "        filename = '{}.sav'.format(prueba_nombre)\n",
-    "        joblib.dump(model, filename)\n",
-    "\n",
-    "        evaluate(\"data/Devel\", output_filename)"
+    "evaluate(\"data/Test-DDI/\", output_filename)"
    ]
   },
   {
