--- a/Lab_5/pruebas.ipynb
+++ b/Lab_5/pruebas.ipynb
@@ -217,6 +217,56 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d = {\"1\": [('hola',2), ('que', 3)],\n",
+    "     \"2\": [('qwerqwer',2), ('asdfasdf', 3)]\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('hola', 2), ('que', 3)]\n",
+      "[('qwerqwer', 2), ('asdfasdf', 3)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for key, value in d.items():\n",
+    "    print value"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
